--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       </header>
       <main class="mdl-layout__content">
         <img src="./images/js_image.png" class="floatRight">
-        <div class="page-content" style="padding-left: 100px">
-          Click the button.
+        <div class="page-content">
+          <p>Click the button.</p>
         </div>
         <!-- Colored raised button -->
         <button
